fix(editor): 🐛 fix overflow of checkbox

--- a/packages/editor/src/styles/prosemirror.css
+++ b/packages/editor/src/styles/prosemirror.css
@@ -1,6 +1,6 @@
-/* .ProseMirror {
-  @apply pt-2.5 pb-4 px-3.5;
-} */
+.ProseMirror {
+  @apply pt-4 pb-6 px-4;
+}
 
 .ProseMirror .is-editor-empty:first-child::before {
   content: attr(data-placeholder);
@@ -76,4 +76,13 @@ ul[data-type="taskList"] li[data-checked="true"]>div>p {
   text-decoration: line-through;
   text-decoration-thickness: 1px;
   opacity: 0.65;
+}
+
+ul[data-type="taskList"] li>div>p {
+  overflow-wrap: break-word;
+}
+
+ul[data-type="taskList"] li>div {
+  white-space: pre-wrap;
+  max-width: 96%;
 }
